8333542: Breakpoint in parallel code does not work

Reviewed-by: cjplummer
Backport-of: b3bf31a0a08da679ec2fd21613243fb17b1135a9